# btfparse

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
btfparse/: CMakeLists.txt
btfparse/btfparse/: CMakeLists.txt
btfparse/btfparse/include/btfparse/: ibtf.h  ibtfheadergenerator.h
btfparse/btfparse/src/: btf.cpp  btf.h  btf_types.h  btfheadergenerator.cpp  btfheadergenerator.h  ibtf.cpp  ibtfheadergenerator.cpp
btfparse/btftollvm/: CMakeLists.txt
btfparse/btftollvm/include/btftollvm/: btftollvm.h
btfparse/btftollvm/src/: btftollvm.cpp
btfparse/btftollvm/tests/: main.cpp
btfparse/filereader/: CMakeLists.txt
btfparse/filereader/include/btfparse/: ifilereader.h  istream.h
btfparse/filereader/src/: filereader.cpp  filereader.h  fstreamadapter.cpp  fstreamadapter.h  ifilereader.cpp  memoryfileadapter.cpp  memoryfileadapter.h
btfparse/filereader/tests/: main.cpp
btfparse/utils/: CMakeLists.txt
btfparse/utils/include/btfparse/: error.h  result.h
btfparse/utils/tests/: main.cpp  result.cpp
cmake/: options.cmake  toolchain.cmake  utils.cmake
libraries/: CMakeLists.txt
libraries/doctest/: CMakeLists.txt
tools/: CMakeLists.txt
tools/btfparse-llvm/: CMakeLists.txt
tools/btfparse-llvm/include/btfparse/: illvmbridge.h
tools/btfparse-llvm/src/: illvmbridge.cpp  llvmbridge.cpp  llvmbridge.h
tools/dump-btf/: CMakeLists.txt
tools/dump-btf/src/: main.cpp  utils.cpp  utils.h
tools/dump-btf/tests/: bpftool_compatibility.sh
tools/include-gen/: CMakeLists.txt
tools/include-gen/src/: main.cpp
